--- a/style.css
+++ b/style.css
@@ -709,40 +709,38 @@ body, html {
       }
     }
 
-     .home2-container {
+    .home2-container {
       max-width: 1200px;
       margin: 80px auto;
-      padding-bottom: 80px;
       display: flex;
-      flex-wrap: wrap;
-      /* align-items: center; */
+      /* flex-wrap: wrap; */
       background: white;
-      border: 1px solid #eee;
+      /* border: 1px solid #eee; */
     }
     .home2-image {
       flex: 1 1 300px;
-      min-width: 400px;
+      min-width: 600px;
     }
     .home2-image img {
       width: 100%;
-      height: auto;
       display: block;
     }
     .home2-content {
-      flex: 1 1 400px;
+      /* flex: 1 1 400px; */
       padding: 0px 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .home2-title {
-      font-size: 18px;
+      font-size: 26px;
       color: #00703c;
-      margin-bottom: 35px;
       font-weight: 400;
     }
     .home2-description {
-      font-size: 14px;
+      font-size: 20px;
       color: #666;
       line-height: 1.6;
-      margin-bottom: 40px;
     }
     .home2-description a {
       color: #0073e6;
@@ -758,8 +756,8 @@ body, html {
 
     .home2-readmore {
       display: inline-block;
-      padding: 8px 16px;
-      font-size: 14px;
+      padding: 8px 20px;
+      font-size: 20px;
       border: 1px solid #ccc;
       color: #555;
       text-decoration: none;
@@ -783,8 +781,12 @@ body, html {
       }
 
       .home2-image {
-      flex: 1 1 250px;
+      flex: 1 1 185px;
       min-width: 300px;
+    }
+
+    .home2-description {
+    font-size: 14px;
     }
     }
 
@@ -795,5 +797,6 @@ body, html {
     color: #666;
     margin-top: 40px;
   }
+
 
 
