--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body, html {
 
 .sec3-team-section {
   padding: 40px 0px;
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -179,39 +179,41 @@ body, html {
 
 .sec3-card {
   display: flex;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   gap: 20px;
 }
 
 .sec3-image {
-  width: 100px;
-  height: 150px;
+  width: 25%;
+  height: auto;
   object-fit: cover;
   border-radius: 2px;
   flex-shrink: 0;
 }
 
 .sec3-info {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .sec3-name {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-weight: 300;
   color: #00bcd4;
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
 }
 
 .sec3-role {
   color: #e91e63;
-  font-size: 0.85rem;
-  margin-bottom: 10px;
+  font-size: 1.1rem;
+  /* margin-bottom: 10px; */
 }
 
 .sec3-desc {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   line-height: 1.5;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   width: 90%;
 }
 
@@ -244,11 +246,25 @@ body, html {
     border-radius: 8px;
   }
 
-  .sec3-image {
-    width: 100px;
-    height: 150px;
-    margin-bottom: 15px;
-  }
+  .sec3-name {
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #00bcd4;
+  /* margin-bottom: 4px; */
+}
+
+.sec3-role {
+  color: #e91e63;
+  font-size: 0.80rem;
+  /* margin-bottom: 10px; */
+}
+
+.sec3-desc {
+  font-size: 0.84rem;
+  line-height: 1.5;
+  /* margin-bottom: 10px; */
+  width: 90%;
+}
 
   .sec3-info {
     width: 100%;
@@ -273,7 +289,7 @@ body, html {
     background-size: cover;
     background-repeat: no-repeat;
     height: 40vh;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0px auto;
 }
 
@@ -797,6 +813,7 @@ body, html {
     color: #666;
     margin-top: 40px;
   }
+
 
 
 
