--- a/style.css
+++ b/style.css
@@ -649,7 +649,13 @@ body, html {
       cursor: pointer;
       margin: 0 5px;
       font-weight: 600;
+       transition: background-color 0.3s ease, color 0.3s ease;
     }
+
+    .home1-tab-button:hover {
+  background-color: #00703c; /* Green background on hover */
+  color: white; /* White text on hover */
+}
 
     .home1-tab-button.active {
       background-color: #00703c;
@@ -813,6 +819,7 @@ body, html {
     color: #666;
     margin-top: 40px;
   }
+
 
 
 
